--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,7 +8,9 @@
     "declarationMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": ["ESNext"],
+    "lib": [
+      "ESNext"
+    ],
     "module": "CommonJS",
     "allowJs": true,
     "moduleResolution": "node",
