--- a/packages/tracker/docker-compose.yml
+++ b/packages/tracker/docker-compose.yml
@@ -1,41 +1,41 @@
 services:
   postgres:
-    image: postgres:16
-    shm_size: 1g
+    image: $POSTGRES_IMAGE
+    shm_size: $DATABASE_SHM_SIZE
     restart: always
     environment:
       POSTGRES_USER: $DATABASE_USERNAME
       POSTGRES_PASSWORD: $DATABASE_PASSWORD
       POSTGRES_DB: $DATABASE_DB
-      PGDATA: /var/lib/postgresql/data/pgdata
+      PGDATA: $DATABASE_DATA_DIR
     ports:
-      - "5432:5432"
+      - "${DATABASE_PORT}:${DATABASE_PORT}"
     volumes:
-      - ./docker/pgdata:/var/lib/postgresql/data
+      - $DATABASE_VOLUME_PATH:$DATABASE_DATA_DIR
   bitcoind:
-    image: fractalbitcoin/fractal:v0.2.1
+    image: $FB_FULL_NODE_IMAGE
     restart: always
     entrypoint: ["bitcoind", "-datadir=/data/", "-maxtipage=504576000", "-reindex"]
     command: ""
     healthcheck:
       test: ["CMD", "bitcoin-cli", "-datadir=/data/", "getblockchaininfo"]
     ports:
-      - "8330:8330"
-      - "8331:8331"
-      - "8332:8332"
-      - "8333:8333"
+      - "${BITCOIND_ZMQ_PUB_HASH_BLOCK_PORT}:${BITCOIND_ZMQ_PUB_HASH_BLOCK_PORT}"
+      - "${BITCOIND_ZMQ_PUB_RAW_TX_PORT}:${BITCOIND_ZMQ_PUB_RAW_TX_PORT}"
+      - "${BITCOIND_RPC_PORT}:${BITCOIND_RPC_PORT}"
+      - "${BITCOIND_P2P_PORT}:${BITCOIND_P2P_PORT}"
     deploy:
       resources:
         limits:
-          memory: 60G
-          cpus: '4.0'
+          memory: $BITCOIND_RESOURCES_LIMITS_MEMORY
+          cpus: '${BITCOIND_RESOURCES_LIMITS_CPU}'
         reservations:
-          memory: 40G
-          cpus: '2.0'
-    memswap_limit: 80G
-    mem_swappiness: 100
+          memory: $BITCOIND_RESOURCES_RESERVATIONS_MEMORY
+          cpus: '${BITCOIND_RESOURCES_RESERVATIONS_CPU}'
+    memswap_limit: $BITCOIND_MEMSWAP_LIMIT
+    mem_swappiness: $BITCOIND_MEM_SWAPPINESS
     volumes:
-      - ./docker/data:/data
+      - $BITCOIND_DATA_DIR:/data
     logging:
       driver: "json-file"
       options:
