cp bitcoin.conf to bitcoin dir

--- a/packages/tracker/.env.example
+++ b/packages/tracker/.env.example
@@ -5,7 +5,7 @@ POSTGRES_IMAGE=postgres:16
 # TODO: DEVS need to update this to their own paths
 USER_HOME=/home/ubuntu
 DATABASE_VOLUME_PATH=$USER_HOME/data/pgdata
-BITCOIND_DATA_DIR=$USER_HOME/data/bitcoin/data
+BITCOIND_DATA_DIR=$USER_HOME/data/bitcoin
 DATABASE_DATA_DIR=/var/lib/postgresql/data/pgdata
 
 # POSTGRES
