--- a/packages/smartcontracts/package.json
+++ b/packages/smartcontracts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cat-protocol/cat-smartcontracts",
-  "version": "0.1.2",
+  "version": "0.2.1",
   "description": "CAT protocol smart contracts.",
   "author": "",
   "main": "./dist/index.js",
@@ -30,18 +30,18 @@
     ]
   },
   "dependencies": {
-    "cbor": "^9.0.2",
-    "dotenv": "^16.0.3",
-    "scrypt-ts": "latest",
-    "varuint-bitcoin": "=1.1.2",
-    "ecpair": "^2.1.0",
-    "ecurve": "^1.0.6",
-    "bitcore-lib-inquisition": "^10.0.30",
-    "js-sha256": "^0.9.0",
-    "bigi": "^1.4.2",
     "@cmdcode/buff": "^2.2.4",
     "@cmdcode/crypto-tools": "^2.7.4",
-    "@cmdcode/tapscript": "^1.4.4"
+    "@cmdcode/tapscript": "^1.4.4",
+    "bigi": "^1.4.2",
+    "bitcore-lib-inquisition": "^10.0.30",
+    "cbor": "^9.0.2",
+    "dotenv": "^16.0.3",
+    "ecpair": "^2.1.0",
+    "ecurve": "^1.0.6",
+    "js-sha256": "^0.9.0",
+    "scrypt-ts": "1.4.0",
+    "varuint-bitcoin": "=1.1.2"
   },
   "devDependencies": {
     "@types/chai": "^4.3.4",
