--- a/packages/smartcontracts/package.json
+++ b/packages/smartcontracts/package.json
@@ -6,6 +6,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
+    "prebuild": "npm run clean && npm run compile",
     "prepublishOnly": "npm run build",
     "build": "tsc",
     "deploy": "npx ts-node ./deploy.ts",
