--- a/packages/smartcontracts/package.json
+++ b/packages/smartcontracts/package.json
@@ -11,7 +11,7 @@
     "build": "tsc",
     "deploy": "npx ts-node ./deploy.ts",
     "clean": "rimraf scrypt.index.json && rimraf dist",
-    "compile": "npx scrypt-cli compile",
+    "compile": "npx scrypt-cli@latest compile",
     "_pretest": "npm run build",
     "test": "npm run test:mocha",
     "test:mocha": "mocha",
@@ -64,7 +64,6 @@
     "prettier": "^2.8.2",
     "regtest-client": "^0.2.1",
     "rimraf": "^3.0.2",
-    "scrypt-cli": "~0.2.0",
     "ts-node": "^10.9.1",
     "typescript": "=5.3.3"
   },
