--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cat-protocol/cat-sdk",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "CAT protocol SDK.",
   "author": "catprotocol.org",
   "main": "./dist/cjs/index.js",
@@ -15,12 +15,11 @@
   "scripts": {
     "postinstall": "sh ./scripts/patch.sh",
     "prebuild": "npm run clean && npm run compile",
-    "postbuild": "npm run make-artifacts",
+    "postbuild": "node ./scripts/fixArtifacts.mjs",
     "prepublishOnly": "npm run build",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "build:esm": "tsc -p tsconfig.esm.json",
     "build": "npm run build:cjs && npm run build:esm",
-    "make-artifacts": "copy-folder artifacts --ext=.json dist/artifacts",
     "deploy": "npx ts-node ./deploy.ts",
     "clean": "rimraf scrypt.index.json && rimraf dist && rimraf artifacts/*",
     "compile": "npx scrypt-cli@0.2.0 compile",
