--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cat-protocol/cat-sdk",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "CAT protocol SDK.",
   "author": "catprotocol.org",
   "main": "./dist/cjs/index.js",
@@ -85,5 +85,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.3.3"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "homepage": "https://catprotocol.org/",
+  "repository": "https://github.com/CATProtocol/cat-token-box/tree/main/packages/sdk"
 }
