Use script-cli@0.2.3 and fix v2 transfer

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -22,7 +22,7 @@
     "build": "npm run build:cjs && npm run build:esm",
     "deploy": "npx ts-node ./deploy.ts",
     "clean": "rimraf scrypt.index.json && rimraf dist && rimraf artifacts/*",
-    "compile": "npx scrypt-cli@0.2.2 compile",
+    "compile": "npx scrypt-cli@0.2.3 compile",
     "_pretest": "npm run build",
     "test": "npm run test:mocha",
     "coverage:c8": "c8 npm run test:mocha",
@@ -47,7 +47,7 @@
     "@bitcoinerlab/secp256k1": "^1.1.1",
     "@cmdcode/buff": "^2.2.4",
     "@cmdcode/crypto-tools": "^2.7.4",
-    "@cmdcode/tapscript": "^1.4.4",
+    "@cmdcode/tapscript": "=1.4.4",
     "@scure/btc-signer": "^1.4.0",
     "bigi": "^1.4.2",
     "bip174": "^3.0.0-rc.1",
