--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -23,7 +23,7 @@
     "postinstall": "node scripts/postinstall.js"
   },
   "dependencies": {
-    "@cmdcode/tapscript": "^1.4.6",
+    "@cmdcode/tapscript": "=1.4.4",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
