--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -21,7 +21,7 @@
     "build": "npm run build:cjs && npm run build:esm",
     "deploy": "npx ts-node ./deploy.ts",
     "clean": "rimraf scrypt.index.json && rimraf dist && rimraf artifacts/*",
-    "compile": "node ../../node_modules/@scrypt-inc/cli-btc/dist/main.js compile",
+    "compile": "npx -y @scrypt-inc/cli-btc@beta compile",
     "_pretest": "npm run build",
     "test": "npm run test:mocha",
     "coverage:c8": "c8 npm run test:mocha",
@@ -48,9 +48,9 @@
     "@cmdcode/crypto-tools": "^2.7.4",
     "@cmdcode/tapscript": "=1.4.4",
     "@scrypt-inc/bitcoinjs-lib": "^1.0.11",
-    "@scrypt-inc/cli-btc": "0.2.9-beta.10",
-    "@scrypt-inc/scrypt-ts-btc": "0.2.9-beta.10",
-    "@scrypt-inc/scrypt-ts-transpiler-btc": "0.2.9-beta.10",
+    "@scrypt-inc/cli-btc": "0.2.9-beta.11",
+    "@scrypt-inc/scrypt-ts-btc": "0.2.9-beta.11",
+    "@scrypt-inc/scrypt-ts-transpiler-btc": "0.2.9-beta.11",
     "@scure/btc-signer": "^1.4.0",
     "bip174": "^3.0.0-rc.1",
     "cbor": "^9.0.2",
