--- a/packages/sdk/.mocharc.json
+++ b/packages/sdk/.mocharc.json
@@ -2,7 +2,7 @@
   "diff": true,
   "require": "ts-node/register",
   "extensions": ["ts"],
-  "spec": ["./tests/features/**/*.test.ts", "./tests/contracts/**/*.test.ts"],
+  "spec": ["./tests/**/*.test.ts"],
   "package": "./package.json",
   "reporter": "spec",
   "slow": "75",
