--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -17,7 +17,7 @@
     "prepublishOnly": "npm run build",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "build:esm": "tsc -p tsconfig.esm.json",
-    "build": "npm run build:cjs && npm run build:esm",
+    "build": "npm run compile && npm run build:cjs && npm run build:esm",
     "deploy": "npx ts-node ./deploy.ts",
     "clean": "rimraf scrypt.index.json && rimraf dist && rimraf artifacts/*",
     "compile": "npx -y @scrypt-inc/cli-btc@beta compile",
