use @scrypt-inc/scrypt-ts-btc 1.0.0

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -20,7 +20,7 @@
     "build": "npm run compile && npm run build:cjs && npm run build:esm",
     "deploy": "npx ts-node ./deploy.ts",
     "clean": "rimraf scrypt.index.json && rimraf dist && rimraf artifacts/*",
-    "compile": "npx -y @scrypt-inc/cli-btc@alpha compile",
+    "compile": "npx -y @scrypt-inc/cli-btc@1.0.0 compile",
     "_pretest": "npm run build",
     "test": "npm run test:mocha",
     "coverage:c8": "c8 npm run test:mocha",
@@ -47,8 +47,8 @@
     "@cmdcode/crypto-tools": "^2.7.4",
     "@cmdcode/tapscript": "=1.4.4",
     "@scrypt-inc/bitcoinjs-lib": "^1.0.11",
-    "@scrypt-inc/cli-btc": "0.2.9-alpha.21",
-    "@scrypt-inc/scrypt-ts-btc": "0.2.9-alpha.21",
+    "@scrypt-inc/cli-btc": "1.0.0",
+    "@scrypt-inc/scrypt-ts-btc": "1.0.0",
     "@scure/btc-signer": "^1.4.0",
     "bip174": "^3.0.0-rc.1",
     "cbor": "^9.0.2",
